--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - run: npm install
     - run: Copy-Item -Force -Recurse -Verbose -Path 'C:\actions-runner\_work\ugurdindar.com\ugurdindar.com\*' -Destination 'C:\ugurdindar.com\'
     - run: cd C:\ugurdindar.com\
     - run: npm run build
