--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.2.2",
+    "dotenv": "^16.3.1",
     "next": "^12.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
