--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: Copy-Item -Force -Recurse -Verbose -Path 'C:\actions-runner\_work\ugurdindar.com\ugurdindar.com\*' -Destination 'C:\ugurdindar.com\'
-    - run: cd C:\ugurdindar.com\ 
+    - run: cp /home/tzesh/actions-runner/_work/ugurdindar.com/ -Destination /home/tzesh/
+    - run: cd /home/tzesh/ugurdindar.com
     - run: npm install
     - run: npm run build
