--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cp /home/tzesh/actions-runner/_work/ugurdindar.com/ -Destination /home/tzesh/
+    - run: cp /home/tzesh/actions-runner/_work/ugurdindar.com/ /home/tzesh/
     - run: cd /home/tzesh/ugurdindar.com
     - run: npm install
     - run: npm run build
