--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,3 @@
-HOSTNAME = ugurdindar.com
+HOSTNAME = onurdindar.com
 PORT = 8081
-NEXT_PUBLIC_GITHUB_USERNAME = tzesh
-SSL_LOCATION = C:/Certbot/live/ugurdindar.com/
+NEXT_PUBLIC_GITHUB_USERNAME = lobeario
