--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vscode-portfolio",
-  "version": "0.1.0",
+  "name": "ugurdindar.com",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,11 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@notionhq/client": "^0.2.2",
-    "dotenv": "^16.3.1",
-    "next": "^12.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-github-calendar": "^3.2.2"
+    "@notionhq/client": "^5.1.0",
+    "dotenv": "^17.2.2",
+    "next": "^15.5.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-github-calendar": "^4.5.10"
   }
 }
