--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI/CD
+# Node.js CI/CD with local Docker deployment
+name: Local Docker CI/CD
 
 on:
   push:
@@ -10,23 +8,24 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: self-hosted
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+    env:
+      PORT: ${{ secrets.PORT }}
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: cp -rfp /home/tzesh/actions-runner/_work/ugurdindar.com/ugurdindar.com /home/tzesh
-    - run: cd /home/tzesh/ugurdindar.com
-    - run: npm install
-    - run: npm run build
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image locally
+        run: docker build -t ugurdindar.com:latest .
+
+      - name: Stop and remove old container
+        run: |
+          docker stop ugurdindar.com || true
+          docker rm ugurdindar.com || true
+
+      - name: Run new container
+        run: docker run -d --name ugurdindar.com -p $PORT:$PORT -e PORT=$PORT ugurdindar.com:latest
